changed to documentation

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="container">
         <a href="https://stockchecker-kztjgnzu2zswhfk9dzcvpe.streamlit.app/" class="btn btn-app" target="_blank">Launch Streamlit App</a>
         
-        <a href="README.md" class="btn btn-readme">View Project Documentation</a>
+        <a href="README.txt" class="btn btn-readme">View Project Documentation</a>
     </div>
 
 </body>
